<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginActivity">

    <View
        android:id="@+id/dimBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/iv_loginWorkers"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/workerslogin2"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/tv_headerLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_loginWorkers"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:textSize="24sp"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:gravity="center"/>
    <TextView
        android:id="@+id/tv_descLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_headerLogin"
        android:layout_marginTop="6dp"
        android:textSize="14sp"
        android:text="@string/desc_login"
        android:gravity="center"/>

    <com.dicoding.carvalappandroid.ui.editText.EmailEditText
        android:id="@+id/email_login"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/insert_email"
        android:textSize="17sp"
        android:layout_marginTop="43dp"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_descLogin"
        android:background="@drawable/border_radius"
        android:paddingStart="17dp"
        android:paddingEnd="17dp"
         />


    <EditText
        android:id="@+id/password_login"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:textSize="17sp"
        android:hint="@string/insert_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_login"
        android:background="@drawable/border_radius"
        android:paddingStart="17dp"
        android:paddingEnd="17dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_Button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="start"
        android:layout_marginTop="60dp"
        app:cornerRadius="12dp"
        android:backgroundTint="#202A44"
        android:enabled="true"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_login" />

    <TextView
        android:id="@+id/et_Reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="48dp"
        android:text="@string/reminder_login"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/login_Button"
        android:gravity="center"/>

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/et_Reminder"
        android:layout_marginStart="2dp"
        android:text="@string/register"
        android:textSize="12sp"
        android:textColor="#005BAC"
        android:layout_marginTop="24dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/login_Button"/>

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="2dp"
        android:text="@string/forgot_password"
        android:textSize="13sp"
        android:textColor="#005BAC"
        android:layout_marginTop="12dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/password_login"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible"/>

</androidx.constraintlayout.widget.ConstraintLayout>