...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_boarding_scene"
    tools:context=".ui.onboarding.BoardingActivity">

    <ImageView
        android:id="@+id/logoMenu1"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:src="@drawable/imgboard1new"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
...
        app:layout_constraintTop_toTopOf="@+id/menu2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_circle_24"
        app:tint="#202A44" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Get Started"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
...
