...
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/welcome_nama"/>

        <ImageView
            android:id="@+id/card_form2"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_welcome"
...
